Change title and author name

--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@
 ############################
 
 # Name of website
-title: My website
+title: levelSight - Simple Game Analytic Tool
 
 # Your name to show in the footer
-author: Some Person
+author: Ammar Badran
 
 ###############################################
 # --- List of links in the navigation bar --- #
